--- a/car-server/pom.xml
+++ b/car-server/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.suprateam</groupId>
-    <artifactId>car</artifactId>
+    <artifactId>car-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>car</name>
+    <name>car-server</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -44,16 +44,16 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-security</artifactId>-->
+        <!--        </dependency>-->
 
-<!--        <dependency>-->
-<!--            <groupId>io.jsonwebtoken</groupId>-->
-<!--            <artifactId>jjwt</artifactId>-->
-<!--            <version>0.9.1</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.jsonwebtoken</groupId>-->
+        <!--            <artifactId>jjwt</artifactId>-->
+        <!--            <version>0.9.1</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -117,11 +117,128 @@
 
     <build>
         <plugins>
+
+
+<!--            <plugin>-->
+<!--            <artifactId>maven-resources-plugin</artifactId>-->
+<!--            <executions>-->
+<!--            <execution>-->
+<!--                <id>copy-resources</id>-->
+<!--                <phase>validate</phase>-->
+<!--                <goals>-->
+<!--                    <goal>copy-resources</goal>-->
+<!--                </goals>-->
+<!--                <configuration>-->
+<!--                    <outputDirectory>${build.directory}/classes/static/</outputDirectory>-->
+<!--                    <resources>-->
+<!--                        <resource>-->
+<!--                            <directory>../car-web/dist</directory>-->
+<!--                        </resource>-->
+<!--                    </resources>-->
+<!--                </configuration>-->
+<!--            </execution>-->
+<!--            </executions>-->
+<!--            </plugin>-->
+
+            <!--            <plugin>-->
+            <!--                <artifactId>maven-resources-plugin</artifactId>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>copy-resources</id>-->
+            <!--                        <phase>validate</phase>-->
+            <!--                        <goals><goal>copy-resources</goal></goals>-->
+            <!--                        <configuration>-->
+            <!--                            <outputDirectory>${build.directory}/classes/static/</outputDirectory >-->
+            <!--                            <resources>-->
+            <!--                                <resource>-->
+            <!--                                    <directory>../car-web/dist</directory>-->
+            <!--                                </resource>-->
+            <!--                            </resources>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions> </plugin>-->
+
+
+            <!--            <plugin>-->
+            <!--                <artifactId>maven-clean-plugin</artifactId>-->
+            <!--                <version>2.5</version>-->
+            <!--                <configuration>-->
+            <!--                    <filesets>-->
+            <!--                        <fileset>-->
+            <!--                            <directory>dist</directory>-->
+            <!--                            <includes>-->
+            <!--                                <include>*</include>-->
+            <!--                            </includes>-->
+            <!--                        </fileset>-->
+            <!--                    </filesets>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
+
+            <!--            <plugin>-->
+            <!--                <groupId>com.github.eirslett</groupId>-->
+            <!--                <artifactId>frontend-maven-plugin</artifactId>-->
+            <!--                <version>1.6</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>install node and npm</id>-->
+            <!--                        <goals>-->
+            <!--                            <goal>install-node-and-npm</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <nodeVersion>v12.18.2</nodeVersion>-->
+            <!--                            <npmVersion>6.14.5</npmVersion>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+
+            <!--                    <execution>-->
+            <!--                        <id>npm run build</id>-->
+            <!--                        <goals>-->
+            <!--                            <goal>npm</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <arguments>run build</arguments>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+
+            <!--                </executions>-->
+            <!--            </plugin>-->
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!--                <plugin>-->
+            <!--                    <artifactId>maven-war-plugin</artifactId>-->
+            <!--                    <version>3.2.0</version>-->
+            <!--                    <configuration>-->
+            <!--                        <webResources>-->
+            <!--                            <resource>-->
+            <!--                                <directory>../car-web/dist</directory>-->
+            <!--                            </resource>-->
+            <!--                        </webResources>-->
+            <!--                    </configuration>-->
+            <!--                </plugin>-->
+
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${build.directory}/classes</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>../car-web/dist</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
 </project>
