--- a/car-server/src/main/resources/application.yml
+++ b/car-server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     hibernate:
       dialect : org.hibernate.dialect.PostgreSQLDialect
-      ddl-auto: create
+      ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
